--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
     </style>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <div class="text">
+      <img src="images/image-qr-code.png" alt="QR" />
+      <h3>Improve your front-end skills by building projects</h3>
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
 
     <div class="attribution">
       Challenge by
