--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <body>
     <div class="text">
       <img src="images/image-qr-code.png" alt="QR" />
-      <h4>Improve your front-end skills by building projects</h4>
+      <h2>Improve your front-end skills by building projects</h2>
       <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
+        Scan the QR code to visit Frontend <br />Mentor and take your coding
+        skills to <br />the next level
       </p>
     </div>
 
